--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ function generalVis(){
 
         canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + (spacer*180)))//needs to calculate space that was taken up above
+        .attr("y", (yStart + (spacer*180))+50)//needs to calculate space that was taken up above
         .text("YOU'VE BEEN: ")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
@@ -801,7 +801,7 @@ function generalVis(){
       canvas.append("text")
         .attr("x", 100)
         .attr("y", (yStart + (spacer*180))+(yTP*80)+20)
-        .text("LONGITUDE: " + tagInfo3.location.longitude + "   " + "LATITUDE: " + tagInfo3.location.latitude)
+        .text("LONGITUDE: " + tagInfo3.location.longitude + "       " + "LATITUDE: " + tagInfo3.location.latitude)
         .style("font", "10px 'stellar'")
         .style("fill", "black");
 
