--- a/index.html
+++ b/index.html
@@ -619,6 +619,8 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
 console.log(response.friends);
+var friendsInfo = response.friends;
+console.log(friendsInfo.summary); 
       // var likesInfo = response.likes;   
       // var likesInfo2 = likesInfo.data; 
       // var yL = 1; 
@@ -817,7 +819,7 @@ console.log(response.friends);
       canvas.append("text")
         .attr("x", 100)
         .attr("y", (yStart + (spacer*180))+(yTP*80)+20)
-        .text("LONGITUDE: " + tagInfo3.location.longitude + " " + "|" + " " + "LATITUDE: " + tagInfo3.location.latitude)
+        .text("LONGITUDE: " + tagInfo3.location.longitude + " " + "," + " " + "LATITUDE: " + tagInfo3.location.latitude)
         .style("font", "10px 'stellar'")
         .style("fill", "black");
 
